# llm-paper-kakao-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  collector.py  db.py  kakao_auth_helper.py  kakao_sender.py  keyword_chat.py  main.py  pyproject.toml  server.py  summarizer.py
templates/: _chat_modal.html  _manual_modal.html  base.html  index.html  mypage.html
